--- a/Resources/Prototypes/_Goobstation/Roles/Antags/conspirator.yml
+++ b/Resources/Prototypes/_Goobstation/Roles/Antags/conspirator.yml
@@ -4,7 +4,7 @@
   antagonist: true
   setPreference: true
   objective: roles-antag-conspirator-objective
-# guides: [ Conspirators ] # Not implemented yet
+  guides: [ Conspirators ]
   requirements:
   - !type:OverallPlaytimeRequirement
     time: 3600 # 1h
