--- a/Resources/Prototypes/_Goobstation/radio_channels.yml
+++ b/Resources/Prototypes/_Goobstation/radio_channels.yml
@@ -15,4 +15,11 @@
   keycode: 'й'
   frequency: 9999
   color: "#91E8E5"
+
+- type: radioChannel
+  id: Conspiracy
+  name: chat-radio-conspiracy
+  keycode: 'o'
+  frequency: 1174
+  color: "#724F29"
   longRange: true
