--- a/Resources/Prototypes/GameRules/roundstart.yml
+++ b/Resources/Prototypes/GameRules/roundstart.yml
@@ -170,6 +170,25 @@
       prob: 0.02
     - id: Shadowling # Goob
       prob: 0.09
+    # Harmony start
+    - id: Conspirators
+      prob: 0.14
+    # Harmony end
+    - id: SubWizard
+      prob: 0.05
+
+- type: entity
+  parent: BaseGameRule
+  id: SubGamemodesRuleNoWizard
+  components:
+  - type: SubGamemodes
+    rules:
+    - id: Thief
+      prob: 0.5
+    # Harmony start
+    - id: Conspirators
+      prob: 0.5
+    # Harmony end
 
 - type: entity
   parent: BaseGameRule
