--- a/Resources/Prototypes/_Harmony/Guidebook/antagonist.yml
+++ b/Resources/Prototypes/_Harmony/Guidebook/antagonist.yml
@@ -1,9 +1,5 @@
 - type: guideEntry
-  id: BloodBrothers
-  name: guide-entry-blood-brothers
-  text: "/ServerInfo/_Harmony/Guidebook/Antagonist/BloodBrothers.xml"
-
-- type: guideEntry
+  abstract: true # reserve edit
   id: Conspirators
   name: guide-entry-conspirators
   text: "/ServerInfo/_Harmony/Guidebook/Antagonist/Conspirators.xml"
