--- a/Resources/Prototypes/_Harmony/radio_channels.yml
+++ b/Resources/Prototypes/_Harmony/radio_channels.yml
@@ -1,7 +1,7 @@
 - type: radioChannel
   id: Conspiracy
   name: chat-radio-conspiracy
-  keycode: 'o'
+  keycode: 'щ'
   frequency: 1174
   color: "#724F29"
   longRange: true
