Fix YAML parsing errors - replace corrupted files with clean Goob versions

--- a/Resources/Prototypes/_Goobstation/GameRules/midround.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/midround.yml
@@ -61,7 +61,8 @@
   - type: StationEvent
     earliestStart: 20
     weight: 4
-    minimumPlayers: 15    maxOccurrences: 1
+    minimumPlayers: 15
+    maxOccurrences: 1
     startAnnouncement: station-event-communication-interception
     startAudio:
       path: /Audio/Announcements/intercept.ogg
