--- a/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
@@ -25,10 +25,9 @@
     Thief: 0.2
     Shadowling: 0.02
     # normal
-    Traitor: 0.22
-    Changeling: 0.9
-    Heretic: 0.10
-    Conspirators: 0.05 # Reserve edit
+    Traitor: 0.25
+    Changeling: 0.10
+    Heretic: 0.11
     CorporateAgent: 0.025
     XenomorphsInfestationRoundstart: 0.02
 
@@ -41,12 +40,11 @@
 - type: weightedRandom
   id: SecretPlusPrimary
   weights:
-    Traitor: 0.22
+    Traitor: 0.25
     Changeling: 0.10
-    Heretic: 0.10
+    Heretic: 0.11
     Nukeops: 0.05
-    Conspirators: 0.05 # Reserve edit
-    Revolutionary: 0.04
+    Revolutionary: 0.05
     Zombie: 0.04 # in search of how to make a rule always run alone? just tag it with LoneRunRule like zombies are
     BlobGameMode: 0.05
     Wizard: 0.025
@@ -54,15 +52,16 @@
     CorporateAgent: 0.025
     XenomorphsInfestationRoundstart: 0.02
     OopsAllThieves: 0.02
+
 # all roundstart antags
 - type: weightedRandom
   id: SecretPlusChaos
   weights:
-    Thief: 0.2    Shadowling: 0.09
-    Traitor: 0.20
+    Thief: 0.2
+    Shadowling: 0.09
+    Traitor: 0.25
     Changeling: 0.10
-    Heretic: 0.10
-    Conspirators: 0.10 # Reserve edit
+    Heretic: 0.11
     Nukeops: 0.05
     Revolutionary: 0.05
     Zombie: 0.04
