--- a/Resources/Prototypes/_Goobstation/Xenobiology/Entities/Objects/Specific/Xenobiology/Extracts/tier0.yml
+++ b/Resources/Prototypes/_Goobstation/Xenobiology/Entities/Objects/Specific/Xenobiology/Extracts/tier0.yml
@@ -38,7 +38,8 @@
       - !type:CreateEntityReactionEffect
         delay: 3
         entity: MobSlimeXenobioBabyGrey
-        number: 3    - reagents: [ Blood ]
+        number: 3
+    - reagents: [ Blood ]
       methods: [ Touch, Injection ]
       effects:
       - !type:MakeUnreactiveEntityEffect
