--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/anomaly.yml
@@ -44,7 +44,8 @@
     - id: AnomalyShadow
     - id: AnomalyTech
     - id: AnomalySanta
-      weight: .4 #  Make more common in december    - id: RandomAnomalyInjectorSpawner # formerly rareChance 0.3, 30% chance of spawning. keep similar
+      weight: .4 #  Make more common in december
+    - id: RandomAnomalyInjectorSpawner # formerly rareChance 0.3, 30% chance of spawning. keep similar
       weight: 3.97 # (1/12*3.97)-(0.4/13) is very close to 30%
 
 - type: entity
