--- a/Resources/Prototypes/_Goobstation/Xenobiology/Entities/Mobs/NPCs/spawners.yml
+++ b/Resources/Prototypes/_Goobstation/Xenobiology/Entities/Mobs/NPCs/spawners.yml
@@ -11,5 +11,6 @@
   - type: RandomSpawner
     prototypes:
     - MobSlimeXenobioBabyGrey
-    - MobSlimeXenobioBabyGrey # more chance to get spawned because it's the mother of all slimes    - MobSlimeXenobioBabyPurple
+    - MobSlimeXenobioBabyGrey # more chance to get spawned because it's the mother of all slimes
+    - MobSlimeXenobioBabyPurple
     - MobSlimeXenobioBabyBlue
