--- a/Resources/Prototypes/Entities/Objects/Specific/Xenoarchaeology/node_scanner.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Xenoarchaeology/node_scanner.yml
@@ -33,3 +33,7 @@
       interfaces:
         enum.NodeScannerUiKey.Key:
           type: NodeScannerBoundUserInterface
+    - type: ReverseEngineering # Nyano
+      difficulty: 2
+      recipes:
+        - NodeScanner
