--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -479,6 +479,10 @@
     materialComposition:
       Steel: 62
       Plastic: 12
+  - type: ReverseEngineering # Delta
+    difficulty: 3
+    recipes:
+      - CryostasisBeaker
 
 - type: entity
   name: bluespace beaker
@@ -506,6 +510,10 @@
       Silver: 12
   - type: StaticPrice #Goobstation - Recycle update
     price: 65
+  - type: ReverseEngineering
+    difficulty: 4
+    recipes:
+      - BluespaceBeaker
 
 - type: entity
   name: dropper
