--- a/Resources/Prototypes/Guidebook/science.yml
+++ b/Resources/Prototypes/Guidebook/science.yml
@@ -77,3 +77,8 @@
   abstract: true #Reserve guidebook
   name: guide-entry-cyborgs
   text: "/ServerInfo/Guidebook/Science/Cyborgs.xml"
+
+- type: guideEntry
+  id: ReverseEngineering
+  name: guide-entry-reverse-engineering
+  text: "/ServerInfo/Guidebook/Science/ReverseEngineering.xml"
