--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/atmos_alarms.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/atmos_alarms.yml
@@ -96,6 +96,9 @@
     tags:
       - AirAlarmElectronics
       - DroneUsable # Goobstation
+  - type: ReverseEngineering # Nyano
+    recipes:
+      - AirAlarmElectronics
   - type: StaticPrice
     price: 61
 
@@ -114,5 +117,8 @@
     tags:
       - FireAlarmElectronics
       - DroneUsable # Goobstation
+  - type: ReverseEngineering # Nyano
+    recipes:
+      - FireAlarmElectronics
   - type: StaticPrice
     price: 61
