--- a/Resources/Prototypes/Entities/Objects/Devices/Electronics/disposal.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Electronics/disposal.yml
@@ -92,5 +92,8 @@
       tags:
         - MailingUnitElectronics
         - DroneUsable # Goobstation
+    - type: ReverseEngineering # Nyano
+      recipes:
+        - MailingUnitElectronics
     - type: StaticPrice
       price: 55
