--- a/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/encryption_keys.yml
@@ -330,6 +330,10 @@
     - state: synd_label
   - type: StaticPrice
     price: 500 # 1000 for 2
+  - type: ReverseEngineering # Nyano
+    difficulty: 5
+    recipes:
+      - EncryptionKeySyndie
 
 - type: entity
   parent: [ EncryptionKey, BaseSiliconScienceContraband ]
