--- a/Resources/Prototypes/Entities/Objects/Devices/swapper.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/swapper.yml
@@ -33,6 +33,10 @@
   - type: Tag
     tags:
     - QuantumSpinInverter
+  - type: ReverseEngineering # Delta
+    difficulty: 4
+    recipes:
+      - DeviceQuantumSpinInverter
   - type: PhysicalComposition #Goobstation - Recycle update
     materialComposition:
       Steel: 175
