--- a/Resources/Prototypes/Research/experimental.yml
+++ b/Resources/Prototypes/Research/experimental.yml
@@ -78,6 +78,7 @@
   - NodeScanner
   - AnalysisComputerCircuitboard
   - ArtifactAnalyzerMachineCircuitboard
+  - ReverseEngineeringMachineCircuitboard
   # Goobstation R&D Console rework start
   position: -2,2
   technologyPrerequisites:
